<resources>
    <string name="app_name">Asteroides_UxiaRCAPP</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="action_settings">Configuración</string>
    <string name="etaercade">APLICACIÓN ASTEROIDES:Hola soy Uxia Rodriguez.Este programa ha sido desarrollado como ejemplo para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
    <string name="acercade_menu">Acerca de...</string>
    <string name="Preferencias_menu">Preferencias</string>
    <string name="Config_menu">Configuracion</string>
</resources>
