<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Asteroidestv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/tituloAplicacion"
        android:textSize="25sp" />

    <Button
        android:id="@+id/Jugarbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Arrancar" />

    <Button
        android:id="@+id/Configurarbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Configurar" />

    <Button
        android:id="@+id/Acercadebt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="lanzarAcercaDe"
        android:text="@string/Acercade" />

    <Button
        android:id="@+id/Salirbt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="salir"
        android:text="@string/Salir" />
</LinearLayout>